# playpty

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/playpty/: __init__.py  __main__.py  playpty.py
